@@ -2,6 +2,7 @@
 v5.0.0-git
 ----------
 
+[jan] Add API to backup and restore user data.
 [jan] Use colors, names, and descriptions of remote CalDAV calendars (Request
       #14612).
 [jan] Add headers to print views.
